--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,49 @@
 asgiref==3.3.1
+attrs==20.3.0
 backcall==0.2.0
 certifi==2020.11.8
 cffi==1.14.3
 chardet==3.0.4
+coverage==5.3
 cryptography==3.2.1
 decorator==4.4.2
 defusedxml==0.6.0
 Django==3.1.3
 django-allauth==0.43.0
+django-filter==2.4.0
 django-rest-auth==0.9.5
+django-test-plus==1.4.0
 djangorestframework==3.12.2
 idna==2.10
+importlib-metadata==3.0.0
+iniconfig==1.1.1
 ipython==7.19.0
 ipython-genutils==0.2.0
 jedi==0.17.2
 oauthlib==3.1.0
+packaging==20.4
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==0.13.1
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
+py==1.9.0
 pycparser==2.20
 Pygments==2.7.2
 PyJWT==1.7.1
+pyparsing==2.4.7
+pytest==6.1.2
+pytest-cov==2.10.1
+pytest-django==4.1.0
 python3-openid==3.2.0
 pytz==2020.4
 requests==2.25.0
 requests-oauthlib==1.3.0
 six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
 traitlets==5.0.5
 urllib3==1.26.2
 wcwidth==0.2.5
+zipp==3.4.0
